--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
 		"react-redux": "^4.4.5",
 		"redux": "^3.5.2",
 		"redux-logger": "^2.6.1",
+		"redux-socket.io": "^1.4.0",
 		"redux-thunk": "^2.0.1",
-		"socket.io": "^1.4.6"
+		"socket.io": "^1.4.6",
+		"socket.io-client": "^2.3.0"
 	},
 	"devDependencies": {
 		"babel-cli": "^6.7.7",
